--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
+  },
+  "peerDependencies": {
+    "@angular/core": "^7.0.0"
   }
 }
