--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,"engines": {
+  "private": true,
+  "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
